# garmin-bridge

./: .gitignore  Makefile  README.md  config.example.yml  config.yaml  flake.nix  pyproject.toml
.github/workflows/: test.yml
src/: bluetooth.py  calendar.py  cli.py  client_calendar.py  client_location.py  client_weather.py  config.py  daemon.py  logger.py  notifications.py  todos.py  tui.py  weather.py
src/protocol/: __init__.py  checksum.py  encoding.py  handshake.py  message.py  protobuf.py  serializer.py  transport.py
tests/: conftest.py  test_bluetooth.py  test_calendar.py  test_client_calendar.py  test_client_location.py  test_client_weather.py  test_config.py  test_notifications.py  test_todos.py  test_weather.py
tests/cassettes/: calendar.yaml  location.yaml  openweather.yaml
tests/fixtures/: openweather_current.json  openweather_forecast.json  openweather_onecall.json
tests/protocol/: test_checksum.py  test_encoding.py  test_handshake.py  test_message.py  test_serializer.py
