[tool.poetry]
name = "garmin-bridge"
version = "0.1.0"
description = "Push notifications, alarms, and calendar events from Linux to Garmin watches via BLE"
authors = ["wh1le"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
bleak = ">=0.21"
icalendar = "*"
click = "*"
dynaconf = "^3.2.13"
prompt-toolkit = "^3.0"
rich = "^14.3.3"
readchar = "^4.2.2"
dbus-fast = "^4.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pudb (>=2025.1.5,<2026.0.0)",
    "ipdb (>=0.13.13,<0.14.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
